fixed height of presentation-container (causing scrollbar to appear in IE)

--- a/src/Story.styl
+++ b/src/Story.styl
@@ -34,7 +34,7 @@
         overflow auto
         position relative
         width 100%
-        height calc(100% - 44px)
+        height calc(100% - 45px)
 
     &.loading:after
         background-color rgba(0,0,0,0.4)
